/*
 * Copyright (c) 2021 Aleksei Gryczewski
 */

plugins {
    id 'org.springframework.boot' version '2.5.4'
    id 'application'
}

apply plugin: 'io.spring.dependency-management'

group 'dev.salmonllama'
version '2.0.5'

sourceCompatibility = 16

repositories {
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
    implementation 'org.postgresql:postgresql:42.2.24'
    implementation 'com.github.Kaaz:ConfigurationBuilder:0.4'
    implementation 'org.javacord:javacord:3.3.2'
    implementation 'com.vdurmont:emoji-java:5.1.1'
    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
    implementation 'ch.qos.logback:logback-classic:1.2.5'
    implementation 'com.google.code.gson:gson:2.8.8'

    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.5.4'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'

    implementation platform('com.google.cloud:libraries-bom:23.0.0')
    implementation 'com.google.cloud:google-cloud-secretmanager'


    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

mainClassName = 'dev.salmonllama.fsbot.Main'
